--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Cragej
 author:
-  name: GitHub User
-  email: your-email@domain.com
+  name: CrageJ
+  email: j.cragej@gmail.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
@@ -58,7 +58,7 @@ minima:
     #  - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
     #  - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
     #  - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
-    - { platform: github, user_url: "https://github.com/jekyll/minima" }
+    # - { platform: github, user_url: "https://github.com/jekyll/minima" }
     #  - { platform: gitlab,         user_url: "https://gitlab.com/jekyll" }
     #  - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
     #  - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
@@ -69,7 +69,7 @@ minima:
     #  - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/1234567/jekyll" }
     #  - { platform: telegram,       user_url: "https://t.me/jekyll" }
     #  - { platform: twitter,        user_url: "https://twitter.com/jekyllrb" }
-    - { platform: x, user_url: "https://x.com/jekyllrb" }
+    # - { platform: x, user_url: "https://x.com/jekyllrb" }
   #  - { platform: youtube,        user_url: "https://www.youtube.com/jekyll" }
 
 permalink: /:title/
